# fastapi

./: .env  .gitlab-ci.yml  Dockerfile  README.md  alembic.ini  deploy.sh  docker-compose.yaml  entrypoint.sh  pyproject.toml
.devcontainer/: devcontainer.json
api/: db.py  main.py  migrate_db.py
api/core/: config.py  db.py  migrate_db.py
api/cruds/: done.py  task.py
api/exceptions/: core.py  error_messages.py
api/models/: task.py
api/routers/: done.py  task.py
api/schemas/: done.py  task.py
migrations/: env.py
migrations/versions/: 202403221809_add_tasks_and_dones.py
tests/: conftest.py  test_main.py
tests/routers/: conftest.py  test_dones.py  test_tasks.py
